--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <section>
         <div id="card">
-            <div id="dado">
+            <div onclick="result()" id="dado">
                 <img src="./assets/1.svg" alt="Dado - Resultado 1">
             </div>
 
-            <input onclick="result()" type="button" value="Jogar Dado">
+            <input onclick="result()" type="button" value="Jogar">
         </div>
     </section>
 
